<resources>
    <string name="app_name">TrailBlazers</string>
    <string name="title">Title</string>
    <string name="distance">Distance</string>
    <string name="time_seconds">Time (seconds)</string>
    <string name="journal">Journal</string>
    <string name="save">Save</string>
    <string name="add_trail">Add Trail</string>
    <string name="add_trails">Add Trail</string>
    <string name="view_trails">View Trails</string>
    <string name="add_trailz">Add Trail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="time_hr_min_sec">Time hr/min/sec</string>
    <string name="hr_min_sec">Hr:Min:Sec</string>
    <string name="min">Min</string>
    <string name="hr">HR</string>
    <string name="sec">Sec</string>
    <string name="view_map">View Map</string>

    <string name="start">Start</string>
    <string name="play">PLAY</string>
    <string name="pause">PAUSE</string>
    <string name="stop">STOP</string>
    <string name="logout">Logout</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="user_type">User Type</string>
    <string name="admin">Admin</string>
    <string name="_00_00_00">00:00:00</string>
</resources>