<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/distanceInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distance"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/hoursInput"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:hint="@string/hr"
        android:inputType="number" />

    <EditText
        android:id="@+id/minutesInput"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:hint="@string/min"
        android:inputType="number" />

    <EditText
        android:id="@+id/secondsInput"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:hint="@string/sec"
        android:inputType="number" />

    <EditText
        android:id="@+id/journalInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/journal" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

<!--    <Button-->
<!--        android:id="@+id/viewMapButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/view_map" />-->

</LinearLayout>