<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <!--TITLE TEXT: Welcome, User-->
    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_user"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <!--USER STATUS: User type-->
    <TextView
        android:id="@+id/adminStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_type"
        android:textSize="26sp"
        android:layout_marginBottom="24dp" />

    <!--ADMIN BUTTON: Admin-->
    <Button
        android:id="@+id/adminButton"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:text="@string/admin"
        android:visibility="invisible"
        android:layout_marginBottom="24dp"
        android:textSize="24sp" />

    <!--See all Logs: Logout-->

    <Button
        android:id="@+id/viewTrailsButton"
        android:text="@string/view_trails"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"/>

    <!--add Logs-->

    <Button
        android:id="@+id/addTrailButton"
        android:text="@string/add_trails"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"/>

    <!--Start Run-->

    <Button
        android:id="@+id/startRunButton"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:text="@string/let_s_get_started"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"/>

    <!--LOGOUT BUTTON: Logout-->
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:text="@string/logout"
        android:textSize="24sp" />



</LinearLayout>